Tue Dec 06 14:09:50 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* doc/tds.html doc/tds_ssl.html: now valid html pages

Tue Dec 06 11:47:33 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/config.c: TDSPORT can be a services port

Mon Dec 05 22:34:07 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* freetds.conf: do not suggest deprecated settings

Mon Dec 05 22:10:17 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/util.c: fix possible core

Mon Dec 05 14:28:29 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/util.c: optimize logging speed

Sun Dec 04 17:53:43 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/net.c: more verbose errors

Sun Dec 04 12:15:53 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: fix print test
	* src/odbc/unittests/print.c: small indent adjustment

Fri Dec 02 11:31:55 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/print.c: improve test

Thu Dec 01 13:21:27 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* misc/test-auto.sh:
	- do not take into account suppressed leaks, cleanup
	* src/dblib/unittests/thread.c:
	- more consistent messages

Wed Nov 30 13:11:44 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/prepare_query.c:
	* src/odbc/unittests/const_params.c:
	- fix rpc calls if not dynamic parameters available

Mon Nov 28 13:24:56 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: optimize configure size

Thu Nov 24 10:11:54 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/net.c: detect correctly connection close

Mon Nov 21 23:21:25 EST 2005	JK Lowden <jklowden@schemamania.org>
	* src/dblib/unittests/rpc.c made output easier to read

Tue Nov 15 18:45:52 EST 2005	JK Lowden <jklowden@schemamania.org>
	* TODO added some ideas out connecting and connecting reporting

Sun Nov  6 20:59:22 CET 2005    Frediano Ziglio <freddy77@angelfire.com>