@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 dnl ------------------------------------------------------------
-dnl $Id: configure.in,v 1.169 2005-11-28 12:25:37 freddy77 Exp $
+dnl $Id: configure.in,v 1.170 2005-12-06 20:24:58 freddy77 Exp $
 dnl If you're trying to create a new configure test, try
 dnl
 dnl 	http://autogen.sourceforge.net/conftest.html
@@ -12,7 +12,7 @@ dnl ------------------------------------------------------------
 # ------------------------------------------------------------
 AC_INIT(src/dblib/dblib.c)
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.169 $)
+AC_REVISION($Revision: 1.170 $)
 
 define(TDSDATE, esyscmd(echo -n $(date +"%Y%m%d")))
 AM_INIT_AUTOMAKE(freetds, 0.64.dev.TDSDATE)
@@ -58,6 +58,7 @@ if test $netdb_reentrant = yes; then
 fi
 
 AC_GNU_SOURCE
+AC_SYS_LARGEFILE
 
 # ------------------------------------------------------------
 # Flag to include library-private definitions
@@ -342,6 +343,7 @@ gethostname sethostent_r gethostent_r])
 LIBS="$OLD_LIBS"
 AC_REPLACE_FUNCS([asprintf vasprintf atoll strtok_r readpassphrase \
 strlcpy strlcat basename])
+AC_FUNC_FSEEKO
 
 # ------------------------------------------------------------
 # Checks for library variables.
